--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: rgb(102, 173, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .search_bar {
@@ -39,51 +39,45 @@ body {
 
 
 input {
-  height: 38px;
+  height: 30px;
+  width: 380px;
   padding: 6px 10px;
   background-color: #fff;
   border: 1px solid #d4dada;
   border-radius: 3px;
   box-shadow: none;
   vertical-align: bottom;
-  appearance: none;
-  width: 100%;
+  font: inherit;
 }
 
 input:focus {
-  border-color: #07682c;
-  outline: 0;
+  border: 1px solid #98c379;
+  outline: 0; 
 }
 
 button {
-  white-space: nowrap;
-  display: inline-block;
-  height: 40px;
+  height: inherit;
+  border: 0;
   line-height: 40px;
   padding: 0 14px;
-  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   background: #fff;
   border-radius: 4px;
   font-size: 15px;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: .025em;
-  color: #6772e5;
-  text-decoration: none;
-  transition: all .15s ease;
+  letter-spacing: 0.025em;
+  color: #56b6c2;
 }
 
 button:hover {
-  color: #7795f8;
   transform: translateY(-1px);
-  box-shadow: 0 7px 14px rgb(50 50 93 / 10%), 0 3px 6px rgb(0 0 0 / 8%);
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
 }
 
 button:active {
-  color: #555abf;
-  background-color: #f6f9fc;
   transform: translateY(1px);
-  box-shadow: 0 4px 6px rgb(50 50 93 / 11%), 0 1px 3px rgb(0 0 0 / 8%);
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 1px 3px rgba(0, 0, 0, 0.08);
 }
 
 
