--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button {
   line-height: 40px;
   padding: 0 14px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-  background: #fff;
+  background: rgb(252, 251, 252);
   border-radius: 4px;
   font-size: 15px;
   font-weight: 600;
